# armor-detect

./: .gitignore  CMakeLists.txt  README.md
src/: Armor.h  ArmorDetect.cpp  ArmorDetect.h  demo.cpp  hist.cpp
